# python-agso-water-api-client

./: .gitignore  README.md  pyproject.toml
agso/: client.py  model.py
examples/: get_last_usage.py
python_agso_water_api_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: __init__.py  client.py
